add ompl constraint planning implementation

--- a/moveit_planners/ompl/CMakeLists.txt
+++ b/moveit_planners/ompl/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(catkin REQUIRED COMPONENTS
   pluginlib
   tf2_ros
   dynamic_reconfigure
+  eigen_conversions
   )
 
 find_package(ompl REQUIRED)
